tests/negative_tests/scope_errors/undefined_array.c
// INVALID - Scope Error: array not declared
// Expected: "undefined variable 'arr'"
int main() {
    int x;
    x = arr[0];  // ERROR: arr is not declared
    return x;
}
